# zip7

./: .gitattributes  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: build.yml
src/: error.rs  item.rs  lib.rs
tests/: unpack.rs
zip7-sys/: Cargo.toml  README.md  build.rs  log.h  wrapper.cpp  wrapper.h
zip7-sys/libzip7/C/: MtDec.h  Ppmd8.c  XzDec.c
zip7-sys/libzip7/CPP/7zip/Archive/Zip/: ZipHandler.cpp  ZipIn.cpp
zip7-sys/src/: lib.rs
