[package]
name = "zip7"
description = "ZIP unpacking bindings from 7z"
edition = "2024"
version = "0.0.1"
license = "MIT"

[dependencies]
derive_more = { version = "2.0", features = ["display", "from"] }
widestring = "1.2"

zip7-sys = { version = "0.0.1", path = "./zip7-sys" }

[dev-dependencies]
rstest = "0.25"
tempfile = "3.20"
